# megabrocommand

./: pyproject.toml
ref/: zomboidserver1.ini  zomboidserver1_SandboxVars.lua  zomboidserver2_SandboxVars.lua
src/megabrocommand/gameserverconfig/: __init__.py
src/megabrocommand/gameserverconfig/projectzomboid/: __init__.py  sandboxconfig.py  serverconfig.py
