[tool.poetry]
name = "megabrocommand"
version = "0.1.0"
description = ""
authors = ["Bryce Jenkins <bryce@durish.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
luadata = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
